--- a/assets/paper-banner.css
+++ b/assets/paper-banner.css
@@ -23,7 +23,7 @@
   background-position: 50% 50%;
   background-size: 130%;
   opacity: 0;
-  transition: opacity 1.4s ease;
+  transition: opacity .25s linear;
   will-change: opacity;
 }
 
